fixed instruction button not showing up on gh-pages

--- a/css/style.css
+++ b/css/style.css
@@ -297,9 +297,9 @@ body {
 .startScreen-btn:hover {
     background-color: rgb(60, 191, 230);
 }
-#instructions-btn {
+/* #instructions-btn {
     height: 100px;
-}
+} */
 
 #instructions {
     display: none;
